<resources>
    <string name="app_name">Keep Count</string>
    <string name="title_activity_main">Keep Count</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tvEventValue">Value</string>
    <string name="tvEventUnit">Unit</string>
    <string name="tvEventCategory">Category</string>
    <string name="tvEventGain">Gain</string>
    <string name="tvEventLoss">Lost</string>
    <string name="tvEventNone">None</string>

    <string name="master_event_delete_alert_title">Delete Event</string>
    <string name="master_event_delete_alert_yes">Yes</string>
    <string name="master_event_delete_alert_no">No</string>

    <string name="delete_event">Delete</string>
    <string name="event_history">Quick History</string>
    <string name="event_reminder">Set Reminder</string>
    <string name="event_reminder_update">Update Reminder</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="dialog_add_title">Mark On Timeline</string>
    <string name="dialog_tvunits">Units</string>
    <string name="dialog_tvdom">Day of the Month</string>
    <string name="archives_empty_list_text">No archives found for this month.</string>
    <string name="dialog_new_event_note">Would you Gain or Lose the above mentioned units every time you mark this event?</string>


    <string-array name="themes">
        <item>Default</item>
        <item>Aqua Splash</item>
        <item>Morpheus</item>
        <item>Sunny</item>
        <item>Ripe</item>
        <item>Turbo Scent</item>
        <item>Palo Alto</item>
        <item>Dark</item>
        <item>Cocktail</item>
    </string-array>

    <string name="OK">OK</string>
    <string name="def_theme">Default</string>
    <string name="theme_summary">Personalize the app</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_notification">Notification Tone</string>
    <string name="pref_notification_summ">Set notification tone ON</string>
</resources>
