<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_event"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white"
        android:title="@string/event_history"
        app:showAsAction="always|withText" />
   <!-- <item
        android:id="@+id/action_update_reminder"
        android:icon="@drawable/mr_ic_audio_vol"
        android:title="@string/event_reminder_update"
        app:showAsAction="always|withText" />-->
    <item
        android:id="@+id/action_delete_reminder"
        android:title="@string/delete_reminder"
        app:showAsAction="always|withText" />
</menu>