<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/llCreateNewDialogHeader"
        android:background="?attr/backgroundColor"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event/Activity"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/etEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:maxLength="30" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/tvEventCategory" />

        <Spinner
            android:id="@+id/spEventCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/etUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Unit"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="0dp"
        android:text="Unit is required to quantify the event. For example, an activity such as 'Took stairs' could have helped you burn some CALORIES. Here 'CALORIES' is the unit for the event"
        android:textSize="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:textSize="12sp"
        android:text="@string/dialog_new_event_note"
        android:textColor="#70000000" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rbNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:checked="true"
            android:text="@string/tvEventNone" />

        <RadioButton
            android:id="@+id/rbGain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"
            android:text="@string/tvEventGain" />

        <RadioButton
            android:id="@+id/rbLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/tvEventLoss" />

    </RadioGroup>


</LinearLayout>