<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/backgroundColor"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addEventHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_title"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.05"
        android:hint="Title"
        android:maxLength="30"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#90000000"
         />

    <EditText
        android:id="@+id/etEventDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.3"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:maxLength="500"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/tvEventValue"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <EditText
            android:id="@+id/etValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.5"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="5dp" />


        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/dialog_tvunits"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/dialog_tvdom"
            android:textSize="10sp" />

        <NumberPicker
            android:id="@+id/npDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/numberpicker_background"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.20"
            android:orientation="horizontal"
            android:scrollIndicators="none" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="Time"
            android:textSize="10sp"
             />

        <NumberPicker
            android:id="@+id/npHour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/numberpicker_background"
            android:layout_weight="0.20"
            android:orientation="horizontal"
            android:scrollIndicators="none" />

        <NumberPicker
            android:id="@+id/npMinute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/numberpicker_background"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:scrollIndicators="none" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="Minutes"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView"
            android:text="Hours"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</LinearLayout>